frame/support/test/tests/storage_alias_ui/forbid_underscore_as_prefix.stderr
error: expected one of: `StorageValue`, `StorageMap`, `CountedStorageMap`, `StorageDoubleMap`, `StorageNMap`
 --> tests/storage_alias_ui/forbid_underscore_as_prefix.rs:2:14
  |
2 | type Ident = CustomStorage<Hello, u32>;
  |              ^^^^^^^^^^^^^
