frame/support/test/tests/storage_alias_ui/forbid_underscore_as_prefix.rs
#[frame_support::storage_alias]
type Ident = CustomStorage<Hello, u32>;

fn main() {}
